--- a/css/index.css
+++ b/css/index.css
@@ -1,61 +1,97 @@
 /* css/styles.css */
 
 *{
-
     margin: 0;
 }
-h1{
 
-
-    color: rgb(19, 40, 66);
-
+html{    
+    background-image: url("../images/wave-pic.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;    
 }
-header{
 
-    background-color: rgb(19, 40, 66);
-    height: 60px;
-    
+#icon {
+    width: 3.6%;
+    height: 52%;
+    float: left;
+    display: inline;
+    padding: 14px;
+    padding-left: 23px;
+    padding-right: 10px;
+}
+
+header h1{
     color: white;
+    font-size: 20px;
+    padding-top: 17px;
+    padding-left: 20px;
+    padding-bottom: 10px;
 }
+
+h1{    
+    color: rgb(19, 40, 66);
+}
+
+header{
+    background-color: rgb(50, 68, 93);
+    height: 70px;    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    align-items: center;
+}
+
+
 body{
-
-    font-family: Poppins ;
-
-
-
-
-    background-color: whitesmoke;
+    clear: left;
+    font-family: Poppins;
+    overflow-x: clip;
+    padding-top: 70px; 
 }
 
-.hidden {
+.hidden{
     display: none;
+    margin: 20px;
     margin-left: 30px;
-    width: 100%;
-
+    margin-bottom: 35px;
+    margin-top: 26px;
+    margin-right: -10px;
 }
 
 #app{
+    clear: left;
     display: flex;
 }
 
-ul{
+nav{
+    clear: left;
     background:#ffffff;
-    height: 100vh;
-    width: 200px;
+    height: auto;
+    min-height: 100vh;
+    left: 0;
+    min-width: 180px;
+    text-align: left;
+    justify-content:left;
+    padding-top: 10px;    
+	border-right:  1.5px solid rgba(37, 90, 154, 0.591);
 }
 
-li:hover {
-
+li:hover{
     cursor: pointer;
     background-color: whitesmoke;
-
-
 }
 
 
 li {
-    align-items: left;
+    margin-left: -18px;
+    margin-top: 11px;
+    padding-left: 8px;
     list-style: none;
-    width: 100%;
-
+    font-size: 15px;
+    width: 95%; 
 }
+
+
