--- a/css/login.css
+++ b/css/login.css
@@ -1,66 +1,58 @@
-body {
-
+body{
 	margin:0;
 	padding: 0;
-	font-family: montserrat;
 	color:rgb(19, 40, 66);
-    /* background-color:  */
-
-	background: white;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", 
+	Arial, "Noto Sans", sans-serif;
+	background: rgba(255, 255, 255, 0.791);
 	height: 100vh;
 	overflow: hidden;
-	
-	background-image: url('loginbg.jpg');
-  
-    background-size: 100% 100%;
+	background-image: url("../images/gradient.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-.center {
+.center{
 	align-items:center;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 400px;
-  /* background: linear-gradient(#48a70b, #75a728); */
+    /* background: linear-gradient(#48a70b, #75a728); */
 	border-radius: 30px;
 }
-.center h1 {
-	
-	text-align: center ;
-	padding: 0 0 10px 0;
-	/* border-bottom: 1px solid silver; */
-}
-.center .body {
-	text-align: center ;
+
+.center h2{
+	color: rgba(20, 56, 99, 0.824);
+	text-align: center;
 	padding: 0 0 10px 0;
 }
 
-
-.center form {
-	
-	padding: 0 40px;
-	box-sizing: border-box;
+.center .body{
+	text-align: center;
 }
 
-.textField input{
-	
-	color:black;
-	font-family: montserrat;
-	
+.center form{	
+	padding: 10px 40px 0 30px;	
+	display: flex;
+	flex-direction: column;
+}
+
+.textField input{	
+	color:black;	
 	width: 100%;
-	/* padding:0 5px; */
     margin-bottom: 20px;
 	height: 40px;
-	border:  2px solid whitesmoke;
-	/* background: none;
-	outline: none; */
-   
-    border-radius:10px;
+	border:  2px solid rgba(37, 90, 154, 0.824);
+    padding-left: 11px; 
+	padding-right: 11px; 
+    border-radius: 10px;
 }
 
-.textField label{
-	
+.textField label{	
 	position: absolute;
 	top: 50%;
 	left: 5px;
@@ -73,55 +65,65 @@ body {
 
 
 header{
-
-background-color: rgb(19, 40, 66);
-height: 60px;
-
-/* text-align: center; */
-/* justify-content: left; */
-color: white;
+    background-color: rgb(19, 40, 66);
+    height: 60px;
+    color: white;
 }
 
-.loginbutton{
-	
-		padding-bottom:20px;
+#loginbody{	
+    justify-content: center;
+    align-items: center;
+	background-color: rgba(255, 255, 255, 0.904);
+    border-radius: 10px;
+    margin-top: 12px;
+    padding: 20px;
+	padding-right: 35px;
+    border: 2px solid rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+                rgba(0, 0, 0, 0.07) 0px 16px 16px;
 	
 }
-input[type="submit"]{
-	width: 100%;
-	height : 50px;
-	border: 1px solid;
-    background-color: rgb(77, 48, 236);
+
+.loginbutton{	
+	padding-bottom:20px;
+}
+
+button {	
+	height: 50px;
+	width: 108%;
+	padding-left:11px;
+	border: 2px solid rgba(21, 58, 104, 0.824);
+    background-color: rgba(28, 71, 125, 0.824);
 	border-radius: 10px;
 	font-size:18px;
 	color: white;
-	font-weight:700;
 	cursor: pointer;
 	outline: none;
 }
 
+button:hover{
+    background: rgba(16, 47, 84, 0.824);
+}
+
+form p{
+	font-weight: bold;
+	text-align: center;
+}
 
 .forgotPassword{
-	
-	
 	display: flex;
-  justify-content: center;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .forgotPassword a{
-	text-align: center ;
-	
-	position: absolute;
-	margin-top: 30px ;
-	color:white;
-	
+	text-align: center;	
+	margin-top: 30px;
+	color:white;	
 }
 
-.textField input:focus ~ label,
-.textField input:valid ~ label
+.textField input:focus ~ label, .textField input:valid ~ label
 {
-top: -5px;
-color: white ;
-
+    top: -5px;
+    color: white;
 }
