--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ html{
 
 header h1{
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     padding-top: 17px;
     padding-left: 20px;
     padding-bottom: 10px;
@@ -36,7 +36,7 @@ h1{
 
 header{
     background-color: rgb(50, 68, 93);
-    height: 70px;    
+    height: 65px;    
     position: fixed;
     top: 0;
     left: 0;
@@ -49,7 +49,7 @@ body{
     clear: left;
     font-family: Poppins;
     overflow-x: clip;
-    padding-top: 70px; 
+    margin-top: 65px; 
 }
 
 .hidden{
