--- a/css/index.css
+++ b/css/index.css
@@ -68,7 +68,7 @@ body{
 
 nav{
     clear: left;
-    background:#ffffff;
+    background-color: rgba(255, 255, 255, 0.85);
     height: auto;
     min-height: 100vh;
     left: 0;
