--- a/css/contact.css
+++ b/css/contact.css
@@ -1,62 +1,51 @@
-#newContactForm {
+        #newContactForm {
+            width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            display: flex;
 
-    display: flex;
-    /* flex-direction:column; */
-    /* justify-content: space-between; */
-    width: 900px;
-    height: 500px;
-    /* background-color: aquamarine; */
+        }
 
+        #formColumn1,
+        #formColumn2 {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            width: 50%;
+        }
 
+        .formfield {
+            width: 90%;
+            margin-bottom: 20px;
+        }
 
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #555;
+        }
 
-}
+        input {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 
-#saveContactButton{
+        button {
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-    background-color: rgb(77, 48, 236);
-    border-radius: 10px;
-    height: 40px;
-    width: 100px;
-    color: white;
-    border: none ;
-
-
-
-}
-input{
-
-    border-radius: 5px;
-    border: 1px whitesmoke;
-    height: 20px;
-}
-
-#formfield{
-
-    display: flex;
-    flex-direction: column;
-}
-
-#formColumn1
-{
-    display: flex;
-    flex-direction: column;
-    /* background-color: red;  */
-    /* flex:1; */
-    width: 250px;
-
-
-    /* justify-content: space-evenly; */
-    /* margin-bottom: 50px; */
-}
-
-#formColumn2
-{
-    display: flex;
-    flex-direction: column;
-    /* background-color: green; */
-    /* flex:2; */
-    width: 250px;
-
-
-}
+        button:hover {
+            background-color: #45a049;
+        }
