--- a/css/contact.css
+++ b/css/contact.css
@@ -1,51 +1,156 @@
-        #newContactForm {
-            width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            display: flex;
+#ncontactHead{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;    
+    margin-top: -5px;
+    padding: 10px;    
+    padding-left: 25px;
+	border:  1.5px solid rgba(37, 90, 154, 0.591);
+    background-color: rgba(255, 255, 255, 0.85);
+}
 
-        }
+#ncontactHead h1{
+    display: inline;    
+    color: rgb(19, 40, 66);
+    font-size: 18px;
+}
 
-        #formColumn1,
-        #formColumn2 {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            width: 50%;
-        }
+#ncontactBody{
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 3px;    
+	border:  1.5px solid rgba(37, 90, 154, 0.591);
+    margin-top: 20px;
+    width: 71.5vw;
+    padding: 23px;    
+    padding-top: 27px;
+    margin-bottom: 50px;
+}
 
-        .formfield {
-            width: 90%;
-            margin-bottom: 20px;
-        }
+#newContactForm {
+    display: flex;
+    flex-direction: column;
+}
 
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #555;
-        }
+#formRow1, #formRow2, #formRow3 {
+    display: flex;
+    justify-content: space-between;    
+    padding: 15px;
+}
 
-        input {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
+#ncontactBody .formselect{
+    display: block;
+    padding-bottom: 15px;
+}
 
-        button {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+#ncontactBody select{    
+    font: inherit;
+    font-size: 13px;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin: 0;
+    border-radius: 3px;
+    outline: inherit;
+    height: 31.5px;  
+    border: solid;
+    border-width: 0.5px;
+    padding-left: 11px;
+    margin-right: 17px;
+}
 
-        button:hover {
-            background-color: #45a049;
-        }
+#ncontactBody #divtitle, #divassign{    
+    margin-left: 15px;
+}
+
+#ncontactBody #divassign select{    
+    width: 41.5%;
+}
+
+#ncontactBody #divtitle select{    
+    width: 10%;
+}
+
+#cnctfname{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+#cnctlname{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+#cnctemail{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+#cnctphone{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+#cnctcompany{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+#cncttype{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    margin-bottom: 30px;
+}
+
+#ncontactBody label{
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+#ncontactBody input{
+    font: inherit;    
+    font-size: 13px;
+    background-color: rgba(255, 255, 255, 0.5);
+    margin: 0;
+    border-radius: 3px;
+    outline: inherit;
+    width: 90%;
+    height: 28.5px;  
+    border: solid;
+    border-width: 0.5px;
+    padding-left: 11px;
+    margin-right: 15px;
+}
+
+#ncontactBody input::placeholder{
+    overflow: visible;
+}
+
+#ncontactBody #savectrl{
+    padding-top: 10px;
+    padding-bottom: 8px;
+    display: flex;
+    flex-direction: row-reverse;
+    width: 96.5%;
+}
+
+#ncontactBody #savectrl button{
+    background: rgb(59, 82, 113);  
+    border-radius: 2px;  
+    font-size: 13px;
+    color: white;
+    border: none;
+    padding: 10px; 
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+#ncontactBody #savectrl button:hover{
+    background: rgb(28, 43, 63);
+}
