--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,7 @@ body{
 .hidden{
     display: none;
     margin: 20px;
-    margin-left: 30px;
+    margin-left: 208px;
     margin-bottom: 35px;
     margin-top: 26px;
     margin-right: -10px;
@@ -70,7 +70,8 @@ nav{
     clear: left;
     background-color: rgba(255, 255, 255, 0.85);
     height: auto;
-    min-height: 100vh;
+    min-height: 100vh;    
+    position: fixed;
     left: 0;
     min-width: 180px;
     text-align: left;
