--- a/css/newuser.css
+++ b/css/newuser.css
@@ -1,20 +1,34 @@
-#userHead{
+#nuserHead{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: -5px;
+    padding: 10px;    
+    padding-left: 25px;
+	border:  1.5px solid rgba(37, 90, 154, 0.591);
+    background-color: rgba(255, 255, 255, 0.85);
 }
 
-h1{
+#nuserHead h1{
+    display: inline;    
     color: rgb(19, 40, 66);
-    font-size: 20px;
+    font-size: 18px;
 }
 
-#userbody{
+#nuserBody{
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.85);
+    border-radius: 3px;    
+	border:  1.5px solid rgba(37, 90, 154, 0.591);
+    margin-top: 20px;
+    width: 71.5vw;
+    padding: 23px;
     align-items: space-between;
     font-size: 15px;
 }
 
-#div1{
+#nuserBody #div1{
     flex-direction: row;
     display: flex;
     padding: 15px;
@@ -23,7 +37,7 @@ h1{
     justify-content: space-between;
 }
 
-#div2{
+#nuserBody #div2{
     flex-direction: row;
     display: flex;
     padding: 15px;    
@@ -32,8 +46,10 @@ h1{
     justify-content: space-between;
 }
 
-#userbody input[type='text'], input[type='email'], input[type='password'], select{
+#nuserBody input[type='text'], #nuserBody input[type='email'], 
+#nuserBody input[type='password'], #nuserBody select{
     font: inherit;
+    font-size: 13px;
     background-color: rgba(255, 255, 255, 0.5);
     margin: 0;
     border-radius: 3px;
@@ -42,21 +58,23 @@ h1{
     height: 30px;
     border: solid;
     border-width: 0.5px;
-    padding-left: 11px;
+    padding-left: 11px;    
+    padding-right: 10px;
     margin-right: 15px;
 }
 
-#userbody input::placeholder{
+#nuserBody input::placeholder{
     overflow: visible;
 }
 
-form {
+#nuserBody form {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-label {
+#nuserBody label {
+    font-size: 14px;
     margin-bottom: 6px;
 }
 
@@ -87,13 +105,13 @@ label {
 #userrole{
     display: flex;
     flex-direction: column;
-    width: 45%;
+    width: 44.5%;
     padding: 15px;
     padding-right: -15px;
 }
 
 
-#savectrl{
+#nuserBody #savectrl{
     padding-top: 10px;
     padding-bottom: 5px;
     display: flex;
@@ -101,10 +119,10 @@ label {
     width: 98%;
 }
 
-#savectrl button{
+#nuserBody #savectrl button{
     background: rgb(59, 82, 113);  
     border-radius: 2px;  
-    font-size: 13px;
+    font-size: 12px;
     color: white;
     border: none;
     padding: 10px; 
@@ -112,7 +130,7 @@ label {
     padding-right: 30px;
 }
 
-#savectrl button:hover{
+#nuserBody #savectrl button:hover{
     background: rgb(28, 43, 63);
 }
 
