--- a/css/contactDetails.css
+++ b/css/contactDetails.css
@@ -1,15 +1,16 @@
 #contactDetailsHead{
     display: flex;
-    align-items: center;
     justify-content: space-between;
     margin-top: -5px;
     padding: 10px;    
     padding-left: 25px;
+    padding-bottom: 13px;
 	border:  1.5px solid rgba(37, 90, 154, 0.591);
     background-color: rgba(255, 255, 255, 0.85);    
 }
 
 #contactDetailsHead h1{
+    margin-top: 5px;
     display: inline;    
     color: rgb(19, 40, 66);
     font-size: 18px;
@@ -21,13 +22,36 @@
     margin-right: 8px;
 }
 
+#contactDetailsHead #divA{
+    display: flex;
+    display: flex;
+    align-items: space-between;
+    flex-direction: column;
+}
+
+#contactDetailsHead #contactExtraInfo{
+    display: flex;
+    justify-content: space-between; 
+    margin-top: 6px;   
+    font-size: 13px;      
+    color: rgba(19, 40, 66, 0.854);
+}
+
+#contactDetailsHead #contactExtraInfo p{
+    margin-right: 13px;
+}
+
+#contactHeadButtons{
+    margin-top: 15px;
+}
+
 #contactHeadButtons button{
     background: rgb(59, 82, 113);  
     border-radius: 2px;  
     font-size: 11px;
     color: white;
     border: none;
-    padding: 7px; 
+    padding: 5.6px;  
     padding-left: 10px;
     padding-right: 10px;
     margin-right: 8px;
@@ -50,6 +74,7 @@
 
 #contactDetailsBody #div1{
     width: 52%;
+    padding-left: 10px;
 }
 
 #contactDetailsBody #div2{
@@ -131,9 +156,6 @@
     margin-bottom: 7px;
 }
 
-
-
-
 #NotesEntry textarea{
     font: inherit;
     resize: none;
@@ -163,7 +185,7 @@
     font-size: 12px;
     color: white;
     border: none;
-    padding: 5px; 
+    padding: 5.5px; 
     padding-left: 15px;
     margin-top: 10px;
     padding-right: 15px;
