--- a/css/index.css
+++ b/css/index.css
@@ -91,8 +91,13 @@ li {
     margin-top: 11px;
     padding-left: 8px;
     list-style: none;
+    text-decoration: none;
     font-size: 15px;
     width: 95%; 
 }
 
+li a, li a:visited {
+    color: rgb(19, 40, 66);
+    text-decoration: none;
+}
 
