--- a/css/index.css
+++ b/css/index.css
@@ -18,28 +18,38 @@ html{
     float: left;
     display: inline;
     padding: 14px;
-    padding-left: 23px;
+    padding-left: 10px;
     padding-right: 10px;
 }
 
 header{
+    display: flex;
+    justify-content: space-between;    
+    padding-left: 13px;
+    padding-right: 30px;
+}
 
+header #divA{
     display: flex;
 }
 
-header p {
+header #divA h1{
+    padding-top: 20px;
+    padding-left: 5px;
+    font-size: 17.5px;  
+    display: flex;
+}
 
-    color: white;
-    font-size: 12px;
-    margin-left: 20px;
-
+#welcome {    
+    font-size: 16px;    
+    padding-right: 58px;
 }
 
 header h1{
-    color: white;
-    font-size: 18px;
+    color: white;  
+    display: inline;
     padding-top: 17px;
-    padding-left: 20px;
+    padding-left: 11px;
     padding-bottom: 10px;
 }
 
