--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -42,10 +42,50 @@
     padding: 23px;
 }
 
+#dashFilter { 
+    display: flex;
+    margin-bottom: 18px;
+    margin-left: 5px;
+}  
+
+#dashFilter h2{ 
+    font-size: 15.8px;
+    margin-top: 2px;
+    display: inline;
+}  
+
+#dashFilter .radio-toolbar {
+    margin-left: 12px;
+}  
+#dashFilter .radio-toolbar input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}  
+#dashFilter .radio-toolbar label {
+    display: inline-block;
+    padding: 3px 7px;
+    margin-right: 7px;
+    font-size: 12.5px;
+    border: 1.4px solid #444;
+    border-radius: 3px;
+}  
+#dashFilter .radio-toolbar label:hover {
+    background-color: rgba(197, 220, 239, 0.368);
+}  
+#dashFilter .radio-toolbar input[type="radio"]:focus + label {
+    border: 1.4px solid #444;
+}  
+#dashFilter .radio-toolbar input[type="radio"]:checked + label {
+    background-color: rgba(52, 77, 103, 0.868); 
+    color: rgb(255, 255, 255);
+}
+
+
 #dashBody table {
 	border-collapse: collapse;
     border-radius: 3px;
-    border: 1.3px solid #00000046;
+    border: 1.5px solid rgba(37, 90, 154, 0.591);
     font-size: 12px;
     width: 72.78vw;
 }
@@ -69,34 +109,32 @@
 
 #support{
     justify-content: center;
-    color: white;
-    background-color: rgb(59, 123, 165);
+    color: rgb(59, 123, 165);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
     width: 60px;
-    border-radius: 5px;    
-	border:  1px solid rgba(36, 44, 54, 0.511);
+    border-radius: 3px;  
+	border: 1.4px solid rgb(59, 123, 165);
     padding: 2.5px; 
     padding-left: 5px;  
     padding-right: 5px;  
     text-align: center;  
     font-weight: bold;    
-    font-size: 10px;
+    font-size: 10.8px;
 }
 
 #saleslead{
     justify-content: center;
-    background-color: rgb(107, 59, 165);
+    color: rgb(107, 59, 165);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
-    color: white;
     width: 55px;
-    border-radius: 5px;    
-	border:  1px solid rgba(36, 44, 54, 0.511);
+    border-radius: 3px;   
+	border:  1.4px solid rgb(107, 59, 165);
     padding: 2.5px; 
     padding-left: 8px;  
     padding-right: 8px;  
     text-align: center;  
     font-weight: bold;    
-    font-size: 10px;
+    font-size: 10.8px;
     white-space: nowrap;
 }
 
