--- a/css/login.css
+++ b/css/login.css
@@ -88,6 +88,16 @@ header{
 .loginbutton{	
 	padding-bottom:20px;
 }
+ 
+#errormsg{	
+	padding-bottom:10px;
+	margin-top:-10px;
+	color: rgb(134, 61, 43);
+	font-weight: bold;
+	font-size:14px;
+	margin-left:27px;
+	text-align:center;
+}
 
 button {	
 	height: 40px;
